# browser-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
browser_mcp/: __init__.py  __main__.py  browser.py  cli.py  server.py
examples/: basic_usage.py  mcp_example.py
tests/: conftest.py  test_browser.py  test_server.py
